# AskiBill_Test

./: .env.example  .replit  Dockerfile.streamlit  ENV_CONFIG_GUIDE.md  PROJECT_STATUS.md  README.md  README_PYTHON.md  README_STREAMLIT.md  docker-compose.streamlit.yml  docker-compose.yml  main.py  package-lock.json  package.json  project_requirements.txt  pyproject.toml  python_migration_plan.md  replit.md  run_streamlit.py  start.py  start_app.py  start_streamlit.py  streamlit_app.py  test_db_connection.py
attached_assets/: Pasted--P-Persona-Act-as-a-senior-full-stack-software-architect-with-15-years-of-experience-in-secure-s-1753328118466_1753328118467.txt
backend/: .env.example  Dockerfile  requirements.txt  streamlit_main.py
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: config.py  database.py
backend/app/models/: bank_account.py  expense.py  user.py
backend/app/schemas/: user.py
client/src/: App.tsx  index.css
client/src/components/: AddBankAccountModal.tsx  BankAccountDetailsModal.tsx  BankingSummary.tsx  ExpenseModal.tsx  MonthlySummary.tsx  ProfileModal.tsx
client/src/hooks/: useAuth.ts
client/src/pages/: auth.tsx  dashboard.tsx  landing.tsx  setup.tsx
mobile/: app.json  package.json
mobile/src/screens/: DashboardScreen.tsx
scripts/: check-env.py  setup-env.sh
server/: bankApiService.ts  bankProviders.ts  db.ts  index.ts  replitAuth.ts  routes.ts  storage.ts
shared/: schema.ts
