[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.5.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]
